--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
     "prisma": "^2.21.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "nodemonConfig": {
+    "events": {
+      "restart": "ts-node src/scripts/restart.ts"
+    }
   }
 }
