--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc --project .",
     "start-prod": "yarn prisma-generate && yarn prisma-migrate && yarn prisma-seed && yarn build && yarn start",
     "prisma-generate": "prisma generate",
-    "prisma-migrate": "prisma migrate deploy",
+    "prisma-migrate": "prisma migrate dev --name init && prisma migrate deploy",
     "prisma-seed": "prisma db seed --preview-feature"
   },
   "repository": {
